# godi-repo

./: README.md
apps/apps-alt-ergo/: BUILDMSG  CONFOPTS  DESCR  Makefile  PLIST  distinfo
apps/apps-cduce/: BUILDMSG  CONFOPTS  DESCR  Makefile  PLIST  distinfo
apps/apps-console2/: DESCR  Makefile  PLIST  distinfo
apps/apps-coq/: BUILDMSG  CONFOPTS  DESCR  Makefile  PLIST  distinfo  patch-ae-coqdep-no-catch
apps/apps-cppo/: DESCR  Makefile  cppo.godiva  distinfo
apps/apps-cubicle/: Makefile  distinfo
apps/apps-eclipse/: DESCR  Makefile  PLIST  distinfo
apps/apps-emacs/: DESCR  Makefile  distinfo
apps/apps-frama-c/: DESCR  Makefile  PLIST  distinfo
apps/apps-godiva/: DESCR  Makefile  distinfo  godiva.godiva
apps/apps-merlin/: BUILDMSG  CONFOPTS  DESCR  Makefile  distinfo
apps/apps-oasis/: DESCR  Makefile  PLIST  distinfo
apps/apps-ocaml-top/: Makefile  PLIST  distinfo
apps/apps-ocamleditor/: DESCR  Makefile  PLIST  distinfo
apps/apps-ocamlify/: DESCR  Makefile  distinfo
apps/apps-ocamlmod/: Makefile  distinfo
apps/apps-ocamltop-gtk/: Makefile  PLIST  distinfo
apps/apps-ocamltop-win/: DESCR  Makefile  PLIST  distinfo
base/base-atk/: Makefile  distinfo
base/base-bzip2/: DESCR  Makefile  PLIST  distinfo
base/base-c-ares/: Makefile  distinfo
base/base-cairo/: Makefile  distinfo
base/base-curl/: BUILDMSG  CONFOPTS  DESCR  Makefile  Makefile.32  Makefile.64  distinfo
base/base-dlfcn/: DESCR  Makefile  distinfo
base/base-enchant/: Makefile  distinfo
base/base-file/: DESCR  (+2 more)
godi/godi-sha/files/: config.h.in  configure  configure.ac
(+1730 files in other folders)
